--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "debug": "~0.7.4",
     "jade": "~1.3.0",
     "bitcoin-node-api": "0.1.0",
+    "maxmind": "runk/node-maxmind",
+    "geolite2": "runk/node-geolite2",
     "request": "2.74.0",
     "jsonminify": "0.2.3",
     "mongodb": "2.0.45",
